--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ wheels/
 .venv
 dataset/metadata.csv
 dataset/reviews.csv
+dataset/genre_data.csv
+dataset/processed_metadata.csv
+dataset/top_authors_data.csv
+dataset/top_books_data.csv
+dataset/scorecard_data.csv
