--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ dataset/processed_metadata.csv
 dataset/top_authors_data.csv
 dataset/top_books_data.csv
 dataset/scorecard_data.csv
+dataset/format_data.csv
